# wx-analysis-kicad

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
cmake/: dev-mode.cmake  variables.cmake
lib/Debug/: sexpr_parser.lib
sexpr_parser/: CmakeLists.txt  isexprable.h  profile.cpp  sexpr.cpp  sexpr.h  sexpr_parse.cpp  sexpr_parser.cpp  sexpr_parser.h  utility_program.cpp  utility_program.h  utility_registry.h
source/: CMakeLists.txt  Kicad80Symbol.cpp  Kicad80Symbol.h  KicadFootprint.cpp  KicadFootprint.h  KicadSymbol.cpp  KicadSymbol.h  LCSYMSort.cpp  LCSYMSort.h  SortLCSymbolInfo.cpp  SortLCSymbolInfo.h  SymboltoJson.cpp  SymboltoJson.h  analysisLCSymbol.cpp  analysisLCSymbol.h  convertAltiumFp.cpp  convertAltiumFp.h  drawingcanvas.h  main.cpp
symbolKiCad8/: CmakeLists.txt  Kicad80SymbolProperty.cpp  Kicad80SymbolProperty.h  Kicad8SymboltoTrainPin.cpp  Kicad8SymboltoTrainPin.h  Kicad8SymboltoTrainTestPin.cpp  Kicad8SymboltoTrainTestPin.h
